tests/NormalTests/paczka1/fuzzy1/93743591.err
Error in line 2: Rpm A767 57,60
Error in line 1: 0R9sJMU S262 90,7
Error in line 6: 0R9sJMU S617 38,6
Error in line 26: N5hy1K9kGD A767 3,0
Error in line 29: Se2du341bbL S714 34,7
Error in line 20: Q4mEYQ S617 38,6
Error in line 33: Se2du341bbL A767 29,3
Error in line 35: S714 S617 411,9
